--- a/config.tml
+++ b/config.tml
@@ -6,8 +6,16 @@ devicename = "Paloalto"
 ifname  = "ethernet1/1.2555"
 ip      = "10.1.1.254"
 zone    = "DMZ1"
+vlanid  = "10" 
 
 [[device.interface]]
 ifname  = "ethernet1/1.20"
 ip      = "10.1.2.254"
 zone    = "DMZ2"
+vlanid  = "" 
+
+[[device.interface]]
+ifname  = "ethernet1/3.30"
+ip      = "10.1.3.254"
+zone    = "DMZ1"
+vlanid  = "30" 
