--- a/config.tml
+++ b/config.tml
@@ -3,19 +3,23 @@
 devicename = "Paloalto"
 
 [[device.interface]]
-ifname  = "ethernet1/1.2555"
+ifname  = "ethernet1/1"
 ip      = "10.1.1.254"
-zone    = "DMZ1"
+zone    = "Untrust"
+
+[[device.interface]]
+ifname  = "ethernet1/4"
+ip      = "11.1.1.254"
+zone    = "Untrust"
+
+[[device.interface]]
+ifname  = "ethernet1/2"
+ip      = "172.16.1.254"
+zone    = "Trust"
 vlanid  = "10" 
 
 [[device.interface]]
-ifname  = "ethernet1/1.20"
-ip      = "10.1.2.254"
-zone    = "DMZ2"
-vlanid  = "" 
-
-[[device.interface]]
-ifname  = "ethernet1/3.30"
-ip      = "10.1.3.254"
-zone    = "DMZ1"
+ifname  = "ethernet1/3"
+ip      = "172.16.2.254"
+zone    = "Trust"
 vlanid  = "30" 
