--- a/config_copy.tml
+++ b/config_copy.tml
@@ -3,19 +3,25 @@
 devicename = "Paloalto"
 
 [[device.interface]]
-ifname  = "ethernet1/1.2555"
-ip      = "10.1.1.254"
-zone    = "DMZ1"
-vlanid  = "10" 
-
-[[device.interface]]
-ifname  = "ethernet1/1.20"
-ip      = "10.1.2.254"
-zone    = "DMZ2"
+ifname  = "ethernet1/1"
+ip      = "10.0.0.251"
+zone    = "Untrust"
 vlanid  = "" 
 
 [[device.interface]]
-ifname  = "ethernet1/3.30"
-ip      = "10.1.3.254"
+ifname  = "ethernet1/3.20"
+ip      = "172.16.20.251"
 zone    = "DMZ1"
+vlanid  = "20" 
+
+[[device.interface]]
+ifname  = "ethernet1/3.30"
+ip      = "172.16.30.251"
+zone    = "DMZ2"
 vlanid  = "30" 
+
+[[device.interface]]
+ifname  = "ethernet1/4"
+ip      = "172.16.0.251"
+zone    = "Trust"
+vlanid  = "" 
